Add readines handlers
