# internal/handler/health/dto/response.go
@@ -12,3 +12,7 @@ type HealthResponse struct {
 	CurrentTime time.Time     `json:"time" example:"2026-07-15T13:03:26.9795475+03:00"`
 	Version     string        `json:"version" example:"v1.0.0"`
 }
+
+type LiveResponse struct {
+	Status string `json:"status" example:"healthy"`
+}
